--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
  <header>
   
     <nav>
-      <a href="../gulproast/index.html">
-        <img id="logo" src="../gulproast/images/gulp-logo-light.png" alt="logo"></a>
-        <li><a href="../gulproast/contact.html">Contact</a></li>
-      <li><a href="../gulproast/products.html">Products</a></li>
-      <li><a href="../gulproast/about.html">About</a></li>                                               
+      <a href="index.html">
+        <img id="logo" src="images/gulp-logo-light.png" alt="logo"></a>
+        <li><a href="contact.html">Contact</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="about.html">About</a></li>                                               
  </nav>
 
    </header>
