--- a/products.html
+++ b/products.html
@@ -13,11 +13,11 @@
  <header>
   
     <nav>
-      <a href="../gulproast/index.html">
-        <img id="logo" src="../gulproast/images/gulp-logo-light.png" alt="logo"></a>
-        <li><a href="../gulproast/contact.html">Contact</a></li>
-      <li><a href="../gulproast/products.html">Products</a></li>
-      <li><a href="../gulproast/about.html">About</a></li>                                              
+      <a href="index.html">
+        <img id="logo" src="images/gulp-logo-light.png" alt="logo"></a>
+        <li><a href="contact.html">Contact</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="about.html">About</a></li>                                              
  </nav>
 
    </header>
@@ -29,7 +29,7 @@
           <div class="productContent">
 
             <div class="row">            
-<img src="../gulproast/images/gulp-coffee-beans.jpg" alt="gulp-coffee-beans">
+<img src="images/gulp-coffee-beans.jpg" alt="gulp-coffee-beans">
 </div>
 
 
@@ -81,7 +81,7 @@
     <br>
      <p>(c) 2024 Gulp Roast Coffee. All rights reserved. Disclaimer: © edX Boot Camps LLC. This is not a coffee website.
      This is a fictitious company and scenario intended only for internal academic purposes.</p><br>
-     <img class="cotbean" src="../gulproast/images/gulp-bottom-beans.jpg" alt="gulp-bottom-beans">
+     <img class="cotbean" src="images/gulp-bottom-beans.jpg" alt="gulp-bottom-beans">
    </div>
   
 
